--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,7 @@
                     <li><a href="{{ path('report') }}">Report</a></li>
                     <li><a href="{{ path('lucky') }}">Lucky</a></li>
                     <li><a href="{{ path('apilist') }}">Api List</a></li>
+                    <li><a href="{{ path('pig_start') }}">Pig game</a></li>
                 </ul>
             </div>
         </nav>
