--- a/templates/pig/play.html.twig
+++ b/templates/pig/play.html.twig
@@ -32,7 +32,7 @@
     </p>
 </form>
 
-{{ include('pig/flash.html.twig') }}
+{{ include('general/flash.html.twig') }}
 
 <script>console.log('{{ session|e('js') }}')</script>
 <script>console.log('{{ dv }}')</script>
