--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,8 +30,10 @@
                     <li><a href="{{ path('about') }}">About</a></li>
                     <li><a href="{{ path('report') }}">Report</a></li>
                     <li><a href="{{ path('lucky') }}">Lucky</a></li>
-                    <li><a href="{{ path('apilist') }}">Api List</a></li>
                     <li><a href="{{ path('pig_start') }}">Pig game</a></li>
+                    <li><a href="{{ path('card_start') }}">Card</a></li>
+                    <li><a href="{{ path('session_show') }}">Session</a></li>
+                    <li><a href="{{ path('apilist') }}">Api List</a></li>
                 </ul>
             </div>
         </nav>
