kmom03 report prepare

--- a/templates/general/report.html.twig
+++ b/templates/general/report.html.twig
@@ -7,7 +7,7 @@
     <p>Snabblänk till:
         <a href="#kmom01">kmom01</a>
         <a href="#kmom02">kmom02</a>
-        {# <a href="#kmom03">kmom03</a> #}
+        <a href="#kmom03">kmom03</a>
         {# <a href="#kmom04">kmom04</a> #}
         {# <a href="#kmom05">kmom05</a> #}
         {# <a href="#kmom06">kmom06</a> #}
@@ -120,8 +120,16 @@
             fall.
         </p>
 
-    {# <section id="kmom03">
-    <h2>Kmom03</h2> #}
+    <section id="kmom03">
+    <h2>Kmom03</h2>
+        <h3>Berätta hur det kändes att modellera ett kortspel med flödesdiagram och psuedokod. Var det något som du tror stödjer dig i din problemlösning och tankearbete för att strukturera koden kring en applikation?</h3>
+        <p></p>
+        <h3>Berätta om din implementation från uppgiften. Hur löste du uppgiften, är du nöjd/missnöjd, vilken förbättringspotential ser du i din koden, dina klasser och applikationen som helhet?</h3>
+        <p></p>
+        <h3>Vilken är din känsla för att koda i ett ramverk som Symfony, så här långt in i kursen?</h3>
+        <p></p>
+        <h3>Vilken är din TIL för detta kmom?</h3>
+        <p></p>
 
     {# <section id="kmom04">
     <h2>Kmom04</h2> #}
