--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,6 +32,7 @@
                     <li><a href="{{ path('lucky') }}">Lucky</a></li>
                     <li><a href="{{ path('pig_start') }}">Pig game</a></li>
                     <li><a href="{{ path('card_start') }}">Card</a></li>
+                    <li><a href="{{ path('game21_start') }}">Game21</a></li>
                     <li><a href="{{ path('session_show') }}">Session</a></li>
                     <li><a href="{{ path('apilist') }}">Api List</a></li>
                 </ul>
